--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon ./src/index.ts",
+    "test": "jest --watchAll --runInBand"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "transform": {
+      "node_modules/variables/.+\\.(j|t)sx?$": "ts-jest",
+      "\\.(gql|graphql)$": "jest-transform-graphql",
+      ".*": "babel-jest"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!variables/.*)"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -22,9 +35,14 @@
     "typescript": "^4.5.2"
   },
   "devDependencies": {
+    "@graphql-tools/utils": "^8.5.3",
+    "@types/compression": "^1.7.2",
     "@types/jest": "^27.0.3",
     "@types/supertest": "^2.0.11",
+    "graphql-import-node": "^0.0.4",
+    "graphql-tools": "^8.2.0",
     "jest": "^27.3.1",
+    "jest-transform-graphql": "^2.1.0",
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.7"
   }
