--- a/server/package.json
+++ b/server/package.json
@@ -7,27 +7,17 @@
     "dev": "nodemon ./src/index.ts",
     "test": "jest --watchAll --runInBand"
   },
-  "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "node",
-    "transform": {
-      "node_modules/variables/.+\\.(j|t)sx?$": "ts-jest",
-      "\\.(gql|graphql)$": "jest-transform-graphql",
-      ".*": "babel-jest"
-    },
-    "transformIgnorePatterns": [
-      "node_modules/(?!variables/.*)"
-    ]
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/schema": "^8.3.1",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.10",
     "apollo-server-core": "^3.5.0",
     "apollo-server-express": "^3.5.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "graphql": "^16.0.1",
@@ -40,7 +30,6 @@
     "@types/jest": "^27.0.3",
     "@types/supertest": "^2.0.11",
     "graphql-import-node": "^0.0.4",
-    "graphql-tools": "^8.2.0",
     "jest": "^27.3.1",
     "jest-transform-graphql": "^2.1.0",
     "supertest": "^6.1.6",
