--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "graphql": "^16.0.1",
+    "mongoose": "^6.0.13",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   },
