--- a/server/package.json
+++ b/server/package.json
@@ -31,8 +31,10 @@
     "@types/jest": "^27.0.3",
     "@types/supertest": "^2.0.11",
     "graphql-import-node": "^0.0.4",
+    "husky": "^7.0.4",
     "jest": "^27.3.1",
     "jest-transform-graphql": "^2.1.0",
+    "lint-staged": "^12.1.2",
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.7"
   }
