--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "server": "npm run dev --prefix ./server",
-    "server:test": "npm run test --prefix ./server"
+    "server:test": "npm run test --prefix ./server",
+    "husky-install": "husky-install"
   },
   "repository": {
     "type": "git",
