--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
     "server:test": "npm run test --prefix ./server",
     "husky-install": "husky install"
   },
-  "lint-staged": "server:test",
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn run lint-staged"
-    }
+  "lint-staged": {
+    "server/src/**/*.{ts,tsx}": [
+      "server:test"
+    ]
   },
   "repository": {
     "type": "git",
