--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./src/index.ts",
-    "test": "jest --watchAll --runInBand"
+    "test": "jest --watchAll --runInBand",
+    "test:server": "jest --runInBand --forceExit"
   },
   "keywords": [],
   "author": "",
