--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon ./src/index.ts",
     "test": "jest --watchAll --runInBand",
-    "test:server": "jest --runInBand --forceExit"
+    "test:server": "jest --runInBand"
   },
   "keywords": [],
   "author": "",
