--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.10",
     "apollo-server-core": "^3.5.0",
+    "apollo-server-errors": "^3.3.0",
     "apollo-server-express": "^3.5.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
