--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "nodemon ./src/index.ts",
     "test": "jest --watchAll --runInBand",
-    "test:server": "jest --runInBand"
+    "test:server": "jest --runInBand",
+    "data:import": "node ./src/Utils/seeder",
+    "data:destroy": "node ./src/Utils/seeder -d"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +22,7 @@
     "apollo-server-errors": "^3.3.0",
     "apollo-server-express": "^3.5.0",
     "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
